WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96800
[BLACKBERRY] Mouse over and mouse out events are lost on non-scrollable pages
https://bugs.webkit.org/show_bug.cgi?id=96800
Summary
[BLACKBERRY] Mouse over and mouse out events are lost on non-scrollable pages
gmak
Reported
2012-09-14 09:43:43 PDT
We aren't sending mouse events on non-scrollable pages if the detected element has no mouse move handlers. We don't actually need to check that if the page doesn't scroll.
Attachments
patch with commit log
(3.98 KB, patch)
2012-09-14 09:47 PDT
,
gmak
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
gmak
Comment 1
2012-09-14 09:47:50 PDT
Created
attachment 164174
[details]
patch with commit log
WebKit Review Bot
Comment 2
2012-09-14 10:09:10 PDT
Comment on
attachment 164174
[details]
patch with commit log Clearing flags on attachment: 164174 Committed
r128625
: <
http://trac.webkit.org/changeset/128625
>
WebKit Review Bot
Comment 3
2012-09-14 10:09:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug