Always send mouse events on pages that don't scroll even if there is no mouse move listener attatched. PR #208228 https://bugs.webkit.org/show_bug.cgi?id=96800

Patch by Genevieve Mak <gmak@rim.com> on 2012-09-14
Reviewed by Antonio Gomes.

Reviewed Internally By Antonio Gomes.

* WebKitSupport/TouchEventHandler.cpp:
(BlackBerry::WebKit::TouchEventHandler::handleTouchPoint):

Canonical link: https://commits.webkit.org/114711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128625 268f45cc-cd09-0410-ab3c-d52691b4dbfc